--- a/angular-projectweb/front-end/src/app/content/content.component.html
+++ b/angular-projectweb/front-end/src/app/content/content.component.html
@@ -167,7 +167,7 @@
         </div>
         <hr class="border border-dark border-1 opacity-50">
 
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-right">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-5">
                     <div class="container">
@@ -184,7 +184,7 @@
             </div>
         </div>
 
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-left">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-7">
                     <div>
@@ -202,7 +202,7 @@
             </div>
         </div>
         
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-right">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-5">
                     <div class="container">
@@ -219,7 +219,7 @@
             </div>
         </div>
 
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-left">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-7">
                     <div>
@@ -237,7 +237,7 @@
             </div>
         </div>
 
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-right">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-5">
                     <div class="container">
@@ -254,7 +254,7 @@
             </div>
         </div>
 
-        <div class="container-fluid step-card">
+        <div class="container-fluid step-card-left">
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-xl-7">
                     <div>
@@ -272,6 +272,38 @@
             </div>
         </div>
 
+        <hr class="border border-dark border-1 opacity-50">
+
+        <div class="container-fluid video-card">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h3>Video Guía</h3> 
+                </div>
+                <div class="col-12">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/qL_eOnBgC-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid rating-card">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h5>Evalúa la receta</h5>
+                </div>
+                <div class="col-12">
+                    <h2>{{recipedetail.name}}</h2> 
+                </div>
+                <div class="row mx-auto">
+                    <div class="col"> 
+                        <span class="material-symbols-outlined not-fill" id="first-star">star</span>
+                        <span class="material-symbols-outlined not-fill" id="second-star">star</span>
+                        <span class="material-symbols-outlined not-fill" id="third-star">star</span>
+                        <span class="material-symbols-outlined not-fill" id="fourth-star">star</span>
+                        <span class="material-symbols-outlined not-fill" id="fifth-star">star</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </body>
